layout bug on small screens
Former-commit-id: 15a3db493a7415c667da6f9423b958cb6b770b48
Former-commit-id: dd3902b282ce3e91cc2b863d2b82c38c33a9ef1c
Former-commit-id: 31abf8bc1ff5fed64de5d00f2b48e3b875f0f1c3
Former-commit-id: 0258b037cd0643016ba23202f6564c7f572a3a1f
Former-commit-id: 11c0500cb019a5ecb851f7a3718ff694b5cf2252
Former-commit-id: df5aeea9130197886b5f9fc5f2b0160c104ce4c2

--- a/podiobooks/themes/pb2-jq/static/css/small-screen.css
+++ b/podiobooks/themes/pb2-jq/static/css/small-screen.css
@@ -557,6 +557,7 @@
 		padding:10px 2%;
 		box-shadow: 0 -2px 3px rgba(0,0,0,.2);
 		z-index:99;
+		margin:0;
 	}
 	.episode-list-title{
 		float:none;
